test/spec_vectors/f64_cmp/fail/module_4.wat
(module (func (result f64) (f64.le (i64.const 0) (f32.const 0))))